unpackaged/main/default/objects/Account/fields/RR_Batch_Num_Match_Group__c.field-meta.xml
<CustomField>
    <fullName>RR_Batch_Num_Match_Group__c</fullName>
    <inlineHelpText>The Round Robin match group within the batch number that this record went through</inlineHelpText>
    <label>RR - Match Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>