unpackaged/main/default/objects/Account/fields/RR_Flag__c.field-meta.xml
<CustomField>
    <fullName>RR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this record was assigned via Round Robin</inlineHelpText>
    <label>Round Robin</label>
    <type>Checkbox</type>
</CustomField>