unpackaged/main/default/objects/Account/fields/RR_Stamp_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>RR_Stamp_OwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the RR Owner.</description>
    <inlineHelpText>The owner to which the record was assigned via Round Robin</inlineHelpText>
    <label>RR - Assigned Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>