unpackaged/main/default/objects/Account/fields/Run_Traction_Account_Re_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Run_Traction_Account_Re_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Contact Re-Assignment flow to distinguish when an Account needs to be run through the Traction Account Re-Assignment Flow</description>
    <label>Run Traction Account Re-Assignment</label>
    <type>Checkbox</type>
</CustomField>