unpackaged/main/default/objects/Account/fields/Safe_Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Account_Owner_ID__c</fullName>
    <formula>CASESAFEID(Owner.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Account Owner ID</label>
    <type>Text</type>
</CustomField>