unpackaged/main/default/objects/Account/fields/Safe_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Parent_Account_ID__c</fullName>
    <formula>CASESAFEID( Parent.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Parent Account ID</label>
    <type>Text</type>
</CustomField>