unpackaged/main/default/objects/Account/fields/Sales_Account_Bookings_Goal__c.field-meta.xml
<CustomField>
    <fullName>Sales_Account_Bookings_Goal__c</fullName>
    <description>Created for Jeff Klein Looker Report purposes, field data managed by Jeff and/or SalesOps</description>
    <inlineHelpText>Created for Jeff Klein Looker Report purposes, field data managed by Jeff and/or SalesOps</inlineHelpText>
    <label>Sales Account Bookings Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>