unpackaged/main/default/objects/Account/fields/Sales_List_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_List_Category__c</fullName>
    <description>Created for Jeff Klein Looker Report purposes, field data managed by Jeff and/or SalesOps</description>
    <inlineHelpText>Created for Jeff Klein Looker Report purposes, field data managed by Jeff and/or SalesOps</inlineHelpText>
    <label>Sales List Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>