unpackaged/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Broadest tier of company's industry classification</description>
    <inlineHelpText>Broadest tier of company's industry classification</inlineHelpText>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>