unpackaged/main/default/objects/Account/fields/SLA_Entitlement_Levels__c.field-meta.xml
<CustomField>
    <fullName>SLA_Entitlement_Levels__c</fullName>
    <description>April 2023 - Segmentation</description>
    <label>SLA Entitlement Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SLA_Entitlement_Levels</valueSetName>
    </valueSet>
</CustomField>