unpackaged/main/default/objects/Account/fields/SLAPopulateSameLeveltoChildAcct__c.field-meta.xml
<CustomField>
    <fullName>SLAPopulateSameLeveltoChildAcct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>System Account To see if Child Accounts also get the same level of SLA.</description>
    <inlineHelpText>System Account To see if Child Accounts also get the same level of SLA.</inlineHelpText>
    <label>SLA Populate Same Level to Child Acct?</label>
    <type>Checkbox</type>
</CustomField>