unpackaged/main/default/objects/Account/fields/Strategic_Index__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Index__c</fullName>
    <formula>if(not(isblank( Fortune_1000_Rank__c )),"F",null)&amp;if(not(isblank( INC_5000_Rank__c )),"I",null)&amp;if(not(isblank( R_D_1000_Rank__c )),"R",null)</formula>
    <label>Strategic Index</label>
    <type>Text</type>
</CustomField>