unpackaged/main/default/objects/Account/fields/Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[decommisisoned] 2019 Strategic Target</label>
    <type>Checkbox</type>
</CustomField>