unpackaged/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>Most specific tier of company's industry classification</description>
    <inlineHelpText>Most specific tier of company's industry classification</inlineHelpText>
    <label>Sub-Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>