unpackaged/main/default/objects/Account/fields/Success_Team__c.field-meta.xml
<CustomField>
    <fullName>Success_Team__c</fullName>
    <formula>IF(ISBLANK(ParentId),
 (House_Retainer__c || Generic_Account__c) &amp;&amp;
 (ISBLANK(GNO_PartnerId__c) || !ISBLANK(Date_of_First_Quote__c))
,
 (Parent.House_Retainer__c || Parent.Generic_Account__c) &amp;&amp;
 (ISBLANK(Parent.GNO_PartnerId__c) || !ISBLANK(Parent.Date_of_First_Quote__c))
)</formula>
    <label>Success Team</label>
    <type>Checkbox</type>
</CustomField>