unpackaged/main/default/objects/Account/fields/Sup_Corporate_Hierarchy_Lifetime_NOrders__c.field-meta.xml
<CustomField>
    <fullName>Sup_Corporate_Hierarchy_Lifetime_NOrders__c</fullName>
    <label>Corporate Hierarchy Lifetime NOrder Supp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>