unpackaged/main/default/objects/Account/fields/Sup_DateOfLastOrder__c.field-meta.xml
<CustomField>
    <fullName>Sup_DateOfLastOrder__c</fullName>
    <label>Supplies Date of Last Order</label>
    <type>Date</type>
</CustomField>