unpackaged/main/default/objects/Account/fields/Sup_Last_Year_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Sup_Last_Year_Account_Spend__c</fullName>
    <label>Last Year Account Spend Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>