unpackaged/main/default/objects/Account/fields/Sup_Lifetime_Spend__c.field-meta.xml
<CustomField>
    <fullName>Sup_Lifetime_Spend__c</fullName>
    <label>Lifetime Spend Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>