unpackaged/main/default/objects/Account/fields/Sup_NumberOfOrderers__c.field-meta.xml
<CustomField>
    <fullName>Sup_NumberOfOrderers__c</fullName>
    <label>Supplies Number of Orderers</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>