unpackaged/main/default/objects/Account/fields/Sup_NumberQuoters__c.field-meta.xml
<CustomField>
    <fullName>Sup_NumberQuoters__c</fullName>
    <label>Supplies Number of Quoters</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>