unpackaged/main/default/objects/Account/fields/Sup_This_Year_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Sup_This_Year_Account_Spend__c</fullName>
    <label>Supplies This Year Account Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>