unpackaged/main/default/objects/Account/fields/Sup_YearBeforeLast_Corp_Hierarchy_Spend__c.field-meta.xml
<CustomField>
    <fullName>Sup_YearBeforeLast_Corp_Hierarchy_Spend__c</fullName>
    <label>Year Before Last Corp Hierarchy Spend Su</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>