unpackaged/main/default/objects/Account/fields/SupplierID__c.field-meta.xml
<CustomField>
    <fullName>SupplierID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please use GNO Partner Id field instead</inlineHelpText>
    <label>[dnu] SupplierID</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>