unpackaged/main/default/objects/Account/fields/Supplies_RR_Flag__c.field-meta.xml
<CustomField>
    <fullName>Supplies_RR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplies RR Flag</label>
    <type>Checkbox</type>
</CustomField>