unpackaged/main/default/objects/Account/fields/Sync_to_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Zendesk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manual Flag to trigger Zendesk syncing</inlineHelpText>
    <label>Sync to Zendesk</label>
    <type>Checkbox</type>
</CustomField>