unpackaged/main/default/objects/Account/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>List of company vertical descriptors. Typically more granular than industry classification</description>
    <inlineHelpText>List of company vertical descriptors. Typically more granular than industry classification</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>