unpackaged/main/default/objects/Account/fields/Target_Account_2023__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Account 2023</label>
    <type>Checkbox</type>
</CustomField>