unpackaged/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A field set by Sales Leadership that indicates a Target for Enterprise CSA.</inlineHelpText>
    <label>[decommission]Target Account</label>
    <type>Checkbox</type>
</CustomField>