unpackaged/main/default/objects/Account/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <formula>if(
and(
isblank( NumberOfEmployees ),isblank( AnnualRevenue)), "AR",
if(
isblank( NumberOfEmployees ),"Check Revenue",
if(NumberOfEmployees &lt;25,"AR",
if(NumberOfEmployees &lt;300, "AR",
if(NumberOfEmployees &lt;2000, "AE",
if(NumberOfEmployees &lt;9999, "AE",
if( AnnualRevenue &lt; 10000000000, "SAE",
"SAE")))))))</formula>
    <label>[dnu] Target Role</label>
    <type>Text</type>
</CustomField>