unpackaged/main/default/objects/Account/fields/Targeted_For__c.field-meta.xml
<CustomField>
    <fullName>Targeted_For__c</fullName>
    <inlineHelpText>The short/mid term intended destination/owner for this account.</inlineHelpText>
    <label>Targeted For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>