unpackaged/main/default/objects/Account/fields/This_Year_Corporate_Hierarchy_Spend__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Corporate_Hierarchy_Spend__c</fullName>
    <label>This Year Corporate Hierarchy Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>