unpackaged/main/default/objects/Account/fields/Top_Company__c.field-meta.xml
<CustomField>
    <fullName>Top_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Company</label>
    <type>Checkbox</type>
</CustomField>