unpackaged/main/default/objects/Account/fields/Traction_Account_Age__c.field-meta.xml
<CustomField>
    <fullName>Traction_Account_Age__c</fullName>
    <formula>IF(NOW() &gt;= (CreatedDate + (30/1440)), true, false)</formula>
    <label>Traction Account Age</label>
    <type>Checkbox</type>
</CustomField>