unpackaged/main/default/objects/Account/fields/Traction_Global_DUNS_Match__c.field-meta.xml
<CustomField>
    <fullName>Traction_Global_DUNS_Match__c</fullName>
    <description>Traction Global DUNS Match?</description>
    <formula>Parent.DNBConnect__D_B_Connect_Company_Profile__r.GU_duns__c = 
TracHier__Parent_Company__r.DNBConnect__D_B_Connect_Company_Profile__r.GU_duns__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Traction Global DUNS Match?</inlineHelpText>
    <label>Traction Global DUNS Match?</label>
    <type>Checkbox</type>
</CustomField>