unpackaged/main/default/objects/Account/fields/Traction_Parent_Match__c.field-meta.xml
<CustomField>
    <fullName>Traction_Parent_Match__c</fullName>
    <description>Traction Hierarchies Parent Match checkbox</description>
    <formula>TracHier__Parent_Company__c =  ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Traction Hierarchies Parent Match checkbox</inlineHelpText>
    <label>Traction Parent Match?</label>
    <type>Checkbox</type>
</CustomField>