unpackaged/main/default/objects/Account/fields/Traction_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Traction_Required_Fields__c</fullName>
    <formula>NOT(ISBLANK(MK_Customer_Fit_Segment__c))</formula>
    <label>Traction Required Fields</label>
    <type>Checkbox</type>
</CustomField>