unpackaged/main/default/objects/Account/fields/UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>UTC_Offset__c</fullName>
    <description>The difference in hours from company's headquarters timezone to UTC (-12 to 14)</description>
    <inlineHelpText>The difference in hours from company's headquarters timezone to UTC (-12 to 14)</inlineHelpText>
    <label>UTC Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>