unpackaged/main/default/objects/Account/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VIP Account's Case will be set to High Priority on Creation</description>
    <inlineHelpText>Diamond Tier Account</inlineHelpText>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>