unpackaged/main/default/objects/Account/fields/X2018_Corporate_Hierarchy_Spend__c.field-meta.xml
<CustomField>
    <fullName>X2018_Corporate_Hierarchy_Spend__c</fullName>
    <label>[dnu] 2018 Corporate Hierarchy Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>