unpackaged/main/default/objects/Account/fields/X2019_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>X2019_Account_Spend__c</fullName>
    <label>[dnu] 2019 Account Spend</label>
    <summarizedField>Opportunity.Order_Bookings_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessThan</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>