unpackaged/main/default/objects/Account/fields/X2020_Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>X2020_Strategic_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked to indicate a top 250 account for 2020's Strategic Initiatives.</inlineHelpText>
    <label>[decommisisoned] 2020 Strategic Target</label>
    <type>Checkbox</type>
</CustomField>