unpackaged/main/default/objects/Account/fields/X2020_Strategic_Target_Rank__c.field-meta.xml
<CustomField>
    <fullName>X2020_Strategic_Target_Rank__c</fullName>
    <inlineHelpText>The ranking of the top 250 accounts for 2020 Strategic Initiatives</inlineHelpText>
    <label>[decommissioned] 2020 Strategic Tgt Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>