unpackaged/main/default/objects/Account/fields/X2021_Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>X2021_Strategic_Target__c</fullName>
    <formula>if( and( not( ispickval(Hierarchy_Type__c,"Account Subdivision")), X2021_Strategic_Tgt_Flag__c =true) ,true ,if( and( ispickval(Hierarchy_Type__c,"Account Subdivision") ,Parent.X2021_Strategic_Tgt_Flag__c =true) ,true ,false))</formula>
    <label>[decommission]2021 Strategic Target</label>
    <type>Checkbox</type>
</CustomField>