unpackaged/main/default/objects/Account/fields/X2021_Strategic_Tgt_Flag__c.field-meta.xml
<CustomField>
    <fullName>X2021_Strategic_Tgt_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[decommission]2021 Strategic Target Flag</label>
    <type>Checkbox</type>
</CustomField>