unpackaged/main/default/objects/Account/fields/Year_Before_Last_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Year_Before_Last_Account_Spend__c</fullName>
    <label>Year Before Last Account Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>