unpackaged/main/default/objects/Account/fields/Year_Before_Last_Corp_Hierarchy_Spend__c.field-meta.xml
<CustomField>
    <fullName>Year_Before_Last_Corp_Hierarchy_Spend__c</fullName>
    <label>Year Before Last Corp Hierarchy Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>