unpackaged/main/default/objects/Account/fields/Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Started__c</fullName>
    <formula>value(

 DNBConnect__D_B_Connect_Company_Profile__r.startDate__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>