unpackaged/main/default/objects/Account/fields/Year_Started_Cust__c.field-meta.xml
<CustomField>
    <fullName>Year_Started_Cust__c</fullName>
    <description>Year company was founded</description>
    <inlineHelpText>Year company was founded</inlineHelpText>
    <label>Year Founded</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>