unpackaged/main/default/objects/Account/fields/YTDSpend__c.field-meta.xml
<CustomField>
    <fullName>YTDSpend__c</fullName>
    <description>Calculated amount of how much the account has Ordered this Year.</description>
    <inlineHelpText>Sum of Won Opportunities associated to the account.</inlineHelpText>
    <label>YTDSpend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>