unpackaged/main/default/objects/Account/validationRules/Sales_Users_Cant_Transfer_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Users_Cant_Transfer_Records</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;
PRIORVALUE(Owner_ID_Name__c) != "Success Team" &amp;&amp;
$Profile.Name = 'Xometry Sales User' &amp;&amp;
$UserRole.Name != 'SDR' &amp;&amp;

($UserRole.Name != 'BDR' &amp;&amp;
$User.Id = OwnerId
)

&amp;&amp; !$Permission.Transfer_Ownership

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Account_VR</errorConditionFormula>
    <errorMessage>Sales Users are not allowed to transfer records. Please see your manager to get a record transferred.</errorMessage>
</ValidationRule>