unpackaged/main/default/objects/Account/listViews/All_Accounts_for_Drift.listView-meta.xml
<ListView>
    <fullName>All_Accounts_for_Drift</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Drift_Domain__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Strategic_Target__c</columns>
    <columns>X2020_Strategic_Target__c</columns>
    <columns>Number_Quoters__c</columns>
    <columns>Number_Orderers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts for Drift (Do Not Edit!!)</label>
</ListView>