unpackaged/main/default/objects/Account/listViews/All_My_Accounts.listView-meta.xml
<ListView>
    <fullName>All_My_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_Open_Opportunities__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Retention_Countdown__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Accounts</label>
</ListView>