unpackaged/main/default/objects/Account/listViews/All_Strategic_Target_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Strategic_Target_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_Open_Opportunities__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Retention_Countdown__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>X2020_Strategic_Target__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Strategic Target Accounts</label>
</ListView>