unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_Open_Opportunities__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Retention_Countdown__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>