unpackaged/main/default/objects/Account/listViews/Charles_M_Accounts.listView-meta.xml
<ListView>
    <fullName>Charles_M_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>YTDSpend__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>meier</value>
    </filters>
    <label>Charles M Accounts</label>
</ListView>