unpackaged/main/default/objects/Account/listViews/Copy_of_First_Order_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Copy_of_First_Order_Last_30_Days</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_Open_Opportunities__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Retention_Countdown__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date_of_First_Order__c</field>
        <operation>lessOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>First Order Last 30 Days</label>
</ListView>