unpackaged/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hierarchy_Type__c</columns>
    <columns>Number_Quoters__c</columns>
    <columns>YTDSpend__c</columns>
    <columns>Email_Domain__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>AccountHierarchyTarget2023__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>