unpackaged/main/default/objects/Account/listViews/PartnerAccounts.listView-meta.xml
<ListView>
    <fullName>PartnerAccounts</fullName>
    <columns>GNO_PartnerId__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>TracRTC__Traction_Complete_Domain__c</columns>
    <columns>TracHier__Owner__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsSupplier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>GNO_PartnerId__c</field>
        <operation>startsWith</operation>
        <value>P</value>
    </filters>
    <label>Partner Accounts - isSupplier Flag True</label>
</ListView>