unpackaged/main/default/objects/Account/listViews/PC_Accounts.listView-meta.xml
<ListView>
    <fullName>PC_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Number_Open_Opportunities__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Lifetime_Spend__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>PC Accounts</label>
</ListView>